Fix #754, by removing addFirst and getFirst.